# LLMOps-claude

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dpo.yaml  eval.yaml  lora.yaml  model.yaml  pretrain.yaml  sft.yaml
evaluation/benchmarks/: runner.py
evaluation/generation_quality/: eval.py
evaluation/perplexity/: eval.py
evaluation/regression_tests/: runner.py
infra/compose/: docker-compose.yml  prometheus.yml
infra/docker/: Dockerfile.serving  Dockerfile.training  entrypoint_training.sh
infra/k8s/: serving-deployment.yaml  training-job.yaml
observability/experiment_tracking/: mlflow_tracker.py
observability/logging/: logger.py
observability/metrics/: prometheus.py
services/: __init__.py
services/data/: __init__.py
services/data/ingestion/: loader.py
services/data/preprocessing/: processor.py
services/data/tokenization/: tokenizer.py
services/serving/api/: app.py
services/serving/inference/: engine.py
services/training/: __init__.py
services/training/core_model/: __init__.py  attention.py  blocks.py  config.py  model.py
services/training/dpo/: __init__.py  train.py  trainer.py
services/training/lora/: __init__.py  train.py  trainer.py
services/training/pretrain/: __init__.py  train.py  trainer.py
services/training/sft/: __init__.py  train.py  trainer.py
tests/integration/: test_dpo.py  test_lora.py  test_real_data_training.py  test_training.py
tests/sanity/: test_services_sanity.py
tests/serving/: test_api.py
tests/unit/: test_dataloader.py  test_model.py  test_tokenizer.py
