[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-stack"
version = "0.1.0"
description = "Production-grade LLM training, fine-tuning, and serving stack"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.39.0",
    "tokenizers>=0.15.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    # PEFT / Fine-tuning
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    # Serving
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "httpx>=0.27.0",
    "vllm>=0.4.0",
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "mlflow>=2.11.0",
    "psutil>=5.9.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.12.0",
    "boto3>=1.34.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-tqdm",
    "types-psutil",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
]
flash = [
    "flash-attn>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "evaluation*", "observability*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["services", "evaluation", "observability"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests/", "infra/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (skipped in CI by default)",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
    "network: marks tests requiring external network (HuggingFace Hub, etc.)",
]
addopts = "-v --tb=short -m 'not slow and not gpu and not network'"

[tool.coverage.run]
source = ["services", "evaluation", "observability"]
omit = ["tests/*", "infra/*"]
